--- a/al_yaqeen/ui/locale/ar/LC_MESSAGES/django.po
+++ b/al_yaqeen/ui/locale/ar/LC_MESSAGES/django.po
@@ -557,12 +557,12 @@ msgstr "قصتنا"
 msgid ""
 "Founded on the principles of trust and certainty, <strong>The Certain News</"
 "strong> was born out of the need for a platform that goes beyond quick "
-"headlines. Our name, which means &quot;certainty&quot; in Arabic, reflects "
+"headlines. Our name, which means <strong>certainty</strong> in Arabic, reflects "
 "our promise to deliver news that you can rely on. Drawing from a passion for "
 "deep investigation and a relentless search for the truth, our team is at the "
 "forefront of modern journalism, merging traditional reporting with cutting-"
 "edge technology. <!---->"
-msgstr "انطلقت النبأ اليقين   من مبادئ الثقة واليقين، استجابةً للحاجة إلى منصة تتجاوز العناوين العاجلة السريعة. يعكس اسمنا—الذي يعني "اليقين"—وعدنا بتقديم أخبار يمكنك الاعتماد عليها. مدفوعين بشغف التحقيق العميق والبحث الدؤوب عن الحقيقة، يقف فريقنا في طليعة الصحافة الحديثة، جامعًا بين التقارير التقليدية والتقنيات المتطورة."
+msgstr "انطلقت النبأ اليقين   من مبادئ الثقة واليقين، استجابةً للحاجة إلى منصة تتجاوز العناوين العاجلة السريعة. يعكس اسمنا—الذي يعني اليقين—وعدنا بتقديم أخبار يمكنك الاعتماد عليها. مدفوعين بشغف التحقيق العميق والبحث الدؤوب عن الحقيقة، يقف فريقنا في طليعة الصحافة الحديثة، جامعًا بين التقارير التقليدية والتقنيات المتطورة."
 
 #: al_yaqeen/ui/templates/ui/about.html:56
 msgid "What We Do"
