Refactor registration and login templates for consistency and clarity
- Updated titles and headings in registration/edit.html and registration/signup.html to use "Edit account" and "Subscribe" respectively.
- Changed "Sign up" to "Subscribe" in various templates for uniformity.
- Modified links to use {% pageurl home %} for better routing.
- Enhanced the layout of the profile page and adjusted spacing in the articles list.
- Improved sidebar and navbar components for better user experience and accessibility.
- Added conditional rendering for authenticated users in the articles list.

--- a/tcn/ui/locale/ar/LC_MESSAGES/django.po
+++ b/tcn/ui/locale/ar/LC_MESSAGES/django.po
@@ -489,7 +489,7 @@ msgstr "تسجيل الدخول"
 #: tcn/ui/templates/ui/base.html:734
 #: tcn/ui/templates/ui/components/sidebar.html:202
 #: tcn/ui/templates/ui/components/sidebar.html:209
-msgid "Sign up"
+msgid "Subscribe"
 msgstr "إنشاء حساب"
 
 #: tcn/ui/templates/registration/base.html:132
