Refactor article and category templates for improved layout and styling
- Updated article display in id.html to enhance responsiveness and alignment.
- Modified category list items in index.html to include border styling.
- Renamed article component from article-1.html to article.html for consistency.
- Adjusted article-2.html to maintain layout integrity across different screen sizes.
- Changed section titles in index.html from 'Trending' to 'Most viewed' for clarity.

--- a/tcn/ui/locale/ar/LC_MESSAGES/django.po
+++ b/tcn/ui/locale/ar/LC_MESSAGES/django.po
@@ -1192,14 +1192,8 @@ msgstr ""
 "الجديدة مباشرة في الخلاصة المباشرة أدناه."
 
 #: .\tcn\ui\templates\tcn\index.html:71
-msgid "Trending"
-msgstr "الأكثر تداولًا"
-
-#: .\tcn\ui\templates\tcn\index.html:74
-#, fuzzy
-#| msgid "Trending"
-msgid "Trending now"
-msgstr "الأكثر تداولًا"
+msgid "Most viewed"
+msgstr "الأكثر مشاهدة"
 
 #: .\tcn\ui\templates\tcn\index.html:146
 msgid "Now"
